# Phelddagrif

./: CHANGELOG.md  LICENSE  Phelddagrif.cabal  README.md  flake.nix
app/: Main.hs
src/: Distros.hs
