cabal-version:      3.4
name:               Phelddagrif
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             pingu
maintainer:         nor@acorneroftheweb.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Distros
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.19.2.0
                    , mtl
                    , text
                    , rando
    hs-source-dirs:   src
    default-language: GHC2024

executable Phelddagrif
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.19.2.0,
        Phelddagrif

    hs-source-dirs:   app
    default-language: GHC2024
